--- a/_css/style.css
+++ b/_css/style.css
@@ -5,7 +5,7 @@
 .color3 { #72ad75 };
 .color4 { #0e8d94 };
 .color5 { #434d53 };
-*/
+
 *{
     margin: 0;
     padding: 0;
@@ -27,4 +27,4 @@ header{
 }
 .mobile {
     display: none;
-}
+}*/
